--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "private": true,
     "config-overrides-path": "node_modules/react-app-rewired/config-overrides.js",
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-brands-svg-icons": "^6.0.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,11 +21,10 @@
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
+        "babel-plugin-module-resolver": "^4.1.0",
         "customize-cra": "^1.0.0",
         "react-app-rewired": "^2.0.0",
-        "sass": "^1.63.6",
-        "webpack": "^5.88.1",
-        "webpack-dev-server": "^4.15.1"
+        "sass": "^1.63.6"
     },
     "scripts": {
         "start": "react-app-rewired start",
